--- a/page1.html
+++ b/page1.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="carousel slide testimonials-slider cid-qASMey3jiz" id="testimonials-slider1-p" data-rv-view="99">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="carousel slide testimonials-slider cid-qASMey3jiz" id="testimonials-slider1-p" data-rv-view="99">
     
     
 
